force-app/main/default/objects/FixMyStreetCategories__c/FixMyStreetCategories__c.object-meta.xml
<CustomObject>
    <description>A holding table of FixMyStreet Categories</description>
    <label>FixMyStreetCategories</label>
    <nameField>
        <label>FixMyStreetCategories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FixMyStreetCategories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>