force-app/main/default/objects/FixMyStreetCategories__c/fields/Internal_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Internal_Service_Area__c</fullName>
    <label>Internal Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highways</fullName>
            </value>
            <value>
                <fullName>Street Scene</fullName>
            </value>
            <value>
                <fullName>Waste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>