force-app/main/default/objects/FixMyStreetCategories__c/fields/InternalQueue__c.field-meta.xml
<CustomField>
    <fullName>InternalQueue__c</fullName>
    <label>InternalQueue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>