force-app/main/default/objects/FixMyStreetCategories__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>