force-app/main/default/objects/FixMyStreetCategories__c/fields/Send_to_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Confirm</label>
    <type>Checkbox</type>
</CustomField>