force-app/main/default/objects/FixMyStreetCategories__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Code__c</columns>
    <columns>Internal_Service_Area__c</columns>
    <columns>Send_to_Confirm__c</columns>
    <columns>Live__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>