force-app/main/default/objects/FixMyStreetCategories__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Service_Code__c</columns>
    <columns>Send_to_Confirm__c</columns>
    <columns>InternalQueue__c</columns>
    <columns>Live__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Categories</label>
</ListView>